Add list movie endpoint and make some fixes to the endpoints
